force-app/main/default/objects/Defect__c/Defect__c.object-meta.xml
<CustomObject>
    <description>Used to indicate defects on submitted Registrations.</description>
    <label>Defect</label>
    <nameField>
        <displayFormat>DID-{0000}</displayFormat>
        <label>Defect ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>