force-app/main/default/objects/Defect__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <description>Mapped to Rejection_Defect__c field</description>
    <inlineHelpText>Field or Document name.</inlineHelpText>
    <label>Defect Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>