force-app/main/default/objects/Defect__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent Authorization</fullName>
            </value>
            <value>
                <fullName>Agreements</fullName>
            </value>
            <value>
                <fullName>Branch Locations</fullName>
            </value>
            <value>
                <fullName>Company Address Information</fullName>
            </value>
            <value>
                <fullName>Company Address Information - JS</fullName>
            </value>
            <value>
                <fullName>Company Contact</fullName>
            </value>
            <value>
                <fullName>Company Entity</fullName>
            </value>
            <value>
                <fullName>Company Finances</fullName>
            </value>
            <value>
                <fullName>Company Information</fullName>
            </value>
            <value>
                <fullName>Company Information -TA</fullName>
            </value>
            <value>
                <fullName>Company Locations</fullName>
            </value>
            <value>
                <fullName>Company Managers</fullName>
            </value>
            <value>
                <fullName>Company Managers Documentation - TA</fullName>
            </value>
            <value>
                <fullName>Company Type</fullName>
                <label>Company Name &amp; Type</label>
            </value>
            <value>
                <fullName>Company Owners</fullName>
            </value>
            <value>
                <fullName>Company Owners Documentation</fullName>
            </value>
            <value>
                <fullName>Company People</fullName>
            </value>
            <value>
                <fullName>Disclaimer</fullName>
            </value>
            <value>
                <fullName>Download Documents To Be Completed</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Exam</fullName>
            </value>
            <value>
                <fullName>Fees</fullName>
            </value>
            <value>
                <fullName>Follow up Questions</fullName>
            </value>
            <value>
                <fullName>Live Scan</fullName>
            </value>
            <value>
                <fullName>Location Documentation</fullName>
            </value>
            <value>
                <fullName>Medical Information</fullName>
            </value>
            <value>
                <fullName>Minor Information</fullName>
            </value>
            <value>
                <fullName>Owners &amp; Management</fullName>
            </value>
            <value>
                <fullName>Parent/Guardian Information</fullName>
            </value>
            <value>
                <fullName>Permit Applicant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>