force-app/main/default/objects/Defect__c/fields/Sub_Section__c.field-meta.xml
<CustomField>
    <fullName>Sub_Section__c</fullName>
    <label>Sub-Section</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Section__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporation and LLC Questions</fullName>
            </value>
            <value>
                <fullName>Locations</fullName>
            </value>
            <value>
                <fullName>DBAs</fullName>
            </value>
            <value>
                <fullName>Bonds</fullName>
            </value>
            <value>
                <fullName>CBA</fullName>
            </value>
            <value>
                <fullName>Company Owners</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Questions</fullName>
            </value>
            <value>
                <fullName>Exam/Course</fullName>
            </value>
            <value>
                <fullName>Documents</fullName>
            </value>
            <value>
                <fullName>Fee Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>