force-app/main/default/objects/Defect__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Registration_Type__c</columns>
    <columns>Item_Name__c</columns>
    <columns>Section__c</columns>
    <columns>Sub_Section__c</columns>
    <columns>Object__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>