force-app/main/default/objects/Defect__c/listViews/Child_Performer_Services_Defects.listView-meta.xml
<ListView>
    <fullName>Child_Performer_Services_Defects</fullName>
    <columns>NAME</columns>
    <columns>Item_Name__c</columns>
    <columns>Section__c</columns>
    <columns>Active__c</columns>
    <columns>Description__c</columns>
    <columns>Registration_Type__c</columns>
    <columns>Sub_Section__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Registration_Type__c</field>
        <operation>equals</operation>
        <value>Child Performer Services</value>
    </filters>
    <label>Child Performer Services Defects</label>
    <sharedTo>
        <role>System_Administrators</role>
    </sharedTo>
</ListView>