force-app/main/default/objects/Defect__c/listViews/Entertainment_Work_Defects.listView-meta.xml
<ListView>
    <fullName>Entertainment_Work_Defects</fullName>
    <columns>NAME</columns>
    <columns>Item_Name__c</columns>
    <columns>Section__c</columns>
    <columns>Active__c</columns>
    <columns>Description__c</columns>
    <columns>Registration_Type__c</columns>
    <columns>Sub_Section__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Object__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Registration_Type__c</field>
        <operation>equals</operation>
        <value>Entertainment Work</value>
    </filters>
    <label>Entertainment Work Defects</label>
    <sharedTo>
        <role>System_Administrators</role>
    </sharedTo>
</ListView>