force-app/main/default/objects/Defect__c/listViews/Farm_Labor_Contractor.listView-meta.xml
<ListView>
    <fullName>Farm_Labor_Contractor</fullName>
    <columns>NAME</columns>
    <columns>Registration_Type__c</columns>
    <columns>Section__c</columns>
    <columns>Item_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Registration_Type__c</field>
        <operation>equals</operation>
        <value>Farm Labor Contractor</value>
    </filters>
    <label>Farm Labor Contractor</label>
</ListView>