force-app/main/default/objects/Defect__c/listViews/Garment_Registration_Defects.listView-meta.xml
<ListView>
    <fullName>Garment_Registration_Defects</fullName>
    <columns>NAME</columns>
    <columns>Item_Name__c</columns>
    <columns>Section__c</columns>
    <columns>Active__c</columns>
    <columns>Description__c</columns>
    <columns>Registration_Type__c</columns>
    <columns>Sub_Section__c</columns>
    <columns>Object__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Registration_Type__c</field>
        <operation>equals</operation>
        <value>Garment Manufacturers and Contractors</value>
    </filters>
    <label>Garment Registration Defects</label>
</ListView>