force-app/main/default/objects/Defect__c/listViews/Permit_to_Employ_Minors.listView-meta.xml
<ListView>
    <fullName>Permit_to_Employ_Minors</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Item_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Registration_Type__c</columns>
    <columns>Section__c</columns>
    <columns>Sub_Section__c</columns>
    <columns>Object__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Registration_Type__c</field>
        <operation>equals</operation>
        <value>Permit to Employ Minors</value>
    </filters>
    <label>Permit to Employ Minors</label>
</ListView>